# MNN

./: CMakeLists.txt
include/MNN/: HalideRuntime.h  ImageProcess.hpp  MNNForwardType.h  Matrix.h
include/MNN/expr/: NeuralNetWorkOp.hpp
swig/: CMakeLists.txt  mnn-java.i  mnn-python.i
swig/java/: InterpreterTest.java  README.md
swig/python/: InterpreterTest.py  mobilenet_demo.py
swig/python/mnn/: __init__.py.in
tools/train/source/data/: Dataset.hpp
